k8s-dash/k8s-dash-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-dash-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
    - host: k8s-dash.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 80
